Java 17 Support (#8)
BroadleafCommerce/MicroPM#3559 - Support Java 17